--- a/_data/materials.yml
+++ b/_data/materials.yml
@@ -5,16 +5,16 @@
     This GitHub repository includes all of the files necessary to launch our user study using the <a href="https://github.com/codementum/experimentr">Experimentr</a> framework locally. Note: The Experimentr framework must already be installed. See the <a href="https://github.com/codementum/experimentr">project website</a> for instructions.
 
 - name: "User Study Results"
-  link: "https://gist.github.com/sjengle/07ed869874c75b14638c499158b3ba8a"
+  link: "https://git.io/vb1Fp"
   icon: "fa-github-alt"
   info: |
     This Gist repository includes CSV files with the user study results in two formats: (a) as exported by the Experimentr framework, and (b) processed into an easier-to-analyze format using Python.
 
 - name: "User Study Demo Video"
-  link: "https://youtu.be/2I5feEUpndY"
+  link: "https://goo.gl/794kaK"
   icon: "fa-youtube-play"
   info: |
-    This screen recording demonstrates what a user would see while participating in the user study. This is useful if you want to see the study without running the Experimentr framework locally.
+    This screen recording (no audio) demonstrates what a user would see while participating in the user study. This is useful if you want to see the study without running the Experimentr framework locally. The video can be streamed in 1080p resolution, or downloaded in 4k resolution.
 
 - name: "Website Repository"
   link: "https://github.com/usfvgl/animated-sploms"
