--- a/_data/materials.yml
+++ b/_data/materials.yml
@@ -10,11 +10,11 @@
   info: |
     This Gist repository includes CSV files with the user study results in two formats: (a) as exported by the Experimentr framework, and (b) processed into an easier-to-analyze format using Python.
 
-- name: "User Study Demo Video"
-  link: "https://goo.gl/794kaK"
-  icon: "fa-youtube-play"
-  info: |
-    This screen recording (no audio) demonstrates what a user would see while participating in the user study. This is useful if you want to see the study without running the Experimentr framework locally. The video can be streamed in 1080p resolution, or downloaded in 4k resolution.
+# - name: "User Study Demo Video"
+#   link: "https://goo.gl/794kaK"
+#   icon: "fa-youtube-play"
+#   info: |
+#     This screen recording (no audio) demonstrates what a user would see while participating in the user study. This is useful if you want to see the study without running the Experimentr framework locally. The video can be streamed in 1080p resolution, or downloaded in 4k resolution.
 
 - name: "Website Repository"
   link: "https://github.com/usfvgl/animated-sploms"
